create server node

--- a/server-node/package.json
+++ b/server-node/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index",
+    "build": "tsc --build",
+    "start": "node dist/index.js"
+  },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -22,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
   }
